src/objects/SchemaBuilderObject__c.object
<CustomObject>
    <fields>
        <fullName>sbEmail__c</fullName>
        <label>sbEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>sbFormula__c</fullName>
        <formula>SQRT(10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sbFormula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sbMasterDetail__c</fullName>
        <label>sbMasterDetail</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SchemaBuilderObjects (sbMasterDetail)</relationshipLabel>
        <relationshipName>SchemaBuilderObjects1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sbcheckbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sbcheckbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sblookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>sblookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SchemaBuilderObjects</relationshipLabel>
        <relationshipName>SchemaBuilderObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SchemaBuilderObject</label>
    <nameField>
        <label>SchemaBuilderObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SchemaBuilderObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>